@@ -1,3 +1,7 @@
+2002-09-09  Theodore A. Roth  <troth@verinet.com>
+
+	* libc/string/strstr.S: Fix dox (s/needle/s2/ and s/haystack/s1/).
+
 2002-09-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/faq.dox: add three subsections.
